--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "html-react-parser": "^5.2.2",
     "lucide-react": "^0.475.0",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
@@ -23,6 +24,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-markdown": "^10.0.0",
     "react-showdown": "^2.3.1",
+    "rehype-raw": "^7.0.0",
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
